--- a/RealmTodoList/Base.lproj/Main.storyboard
+++ b/RealmTodoList/Base.lproj/Main.storyboard
@@ -18,29 +18,56 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" textLabel="R3s-HU-xM6" detailTextLabel="F2L-gW-wz1" rowHeight="63" style="IBUITableViewCellStyleSubtitle" id="Z0T-BP-xwO">
-                                <rect key="frame" x="0.0" y="28" width="428" height="63"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="79" id="Z0T-BP-xwO" customClass="TodoTableViewCell" customModule="RealmTodoList" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="428" height="79"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z0T-BP-xwO" id="Et6-HF-50R">
-                                    <rect key="frame" x="0.0" y="0.0" width="428" height="63"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="428" height="79"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="R3s-HU-xM6">
-                                            <rect key="frame" x="20" y="11.999999999999998" width="33" height="20.333333333333332"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="F2L-gW-wz1">
-                                            <rect key="frame" x="19.999999999999996" y="35.333333333333329" width="43.666666666666664" height="14.333333333333334"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" systemColor="secondaryLabelColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0dJ-3W-8aL">
+                                            <rect key="frame" x="20" y="29.333333333333336" width="25" height="21.000000000000007"/>
+                                            <color key="tintColor" systemColor="labelColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="25" id="ph9-qE-4Pi"/>
+                                                <constraint firstAttribute="height" constant="25" id="pnB-kD-Yd9"/>
+                                            </constraints>
+                                        </imageView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="eCh-Ld-giq">
+                                            <rect key="frame" x="65" y="11" width="343" height="57"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tkk-HD-dcu">
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="ruW-zm-ezG"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qlR-Nx-6MU">
+                                                    <rect key="frame" x="0.0" y="37" width="343" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="eCh-Ld-giq" firstAttribute="leading" secondItem="0dJ-3W-8aL" secondAttribute="trailing" constant="20" id="1BP-jW-V8F"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="eCh-Ld-giq" secondAttribute="trailing" id="Tus-J6-py5"/>
+                                        <constraint firstItem="0dJ-3W-8aL" firstAttribute="leading" secondItem="Et6-HF-50R" secondAttribute="leading" constant="20" id="c5a-H4-7NY"/>
+                                        <constraint firstItem="eCh-Ld-giq" firstAttribute="top" secondItem="Et6-HF-50R" secondAttribute="topMargin" id="fL1-cV-hkN"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="eCh-Ld-giq" secondAttribute="bottom" id="k8z-Bb-yPJ"/>
+                                        <constraint firstItem="0dJ-3W-8aL" firstAttribute="centerY" secondItem="Et6-HF-50R" secondAttribute="centerY" id="uth-gM-jxA"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="checkMark" destination="0dJ-3W-8aL" id="GAT-NF-8L8"/>
+                                    <outlet property="regDateLabel" destination="qlR-Nx-6MU" id="m1i-6B-KJb"/>
+                                    <outlet property="todoLabel" destination="tkk-HD-dcu" id="0Bm-fX-m24"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -143,6 +170,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
