--- a/RealmTodoList/Base.lproj/Main.storyboard
+++ b/RealmTodoList/Base.lproj/Main.storyboard
@@ -25,8 +25,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="428" height="79"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0dJ-3W-8aL">
-                                            <rect key="frame" x="20" y="29.333333333333336" width="25" height="21.000000000000007"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0dJ-3W-8aL">
+                                            <rect key="frame" x="20" y="28" width="25" height="23.666666666666671"/>
                                             <color key="tintColor" systemColor="labelColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="25" id="ph9-qE-4Pi"/>
@@ -170,7 +170,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="checkmark" catalog="system" width="128" height="114"/>
+        <image name="circle" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
